@@ -2,6 +2,8 @@ class Example
   class ViewPanel
     include Dispatch
 
+    gluon_path_filter EXAMPLE_FILTER
+
     def view
       IO.read(@view)
     end
