@@ -1,3 +1,7 @@
+2008-08-08  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/dispatcher.rb: obsolete.
+
 2008-08-05  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon.rb: URL map is new dispather.
